# hyper-term

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  THIRD_PARTY_NOTICES.md  deno.json  design-qa.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .gitignore  README.md  app.zon
apps/desktop/src/: agent_block_contract.native  agent_block_view.zig  agent_capabilities.zig  agent_effects.zig  agent_projection.zig  agent_projection_tests.zig  agent_provider.zig  agent_start_policy.zig  agent_wire.zig  app.native  desktop_model.zig  desktop_view.zig  main.zig  provider_login_tests.zig  tests.zig
apps/terminal/: index.html
apps/terminal/src/: connection-state.ts  connection-state_test.ts  input-focus.ts  input-focus_test.ts  main.ts  protocol.ts  protocol_test.ts  styles.css  terminal-diagnostics.ts  terminal-diagnostics_test.ts  terminal-metadata.ts  terminal-metadata_test.ts  terminal-preferences.ts  terminal-preferences_test.ts  terminal-renderer.ts  terminal-renderer_test.ts  terminal-theme.ts  terminal-theme_test.ts
apps/workbench/: index.html
apps/workbench/genui/: preview-environment.ts  preview-environment_test.ts  preview-shell.ts  preview.html  runtime-error.ts  visual-quality-measure.ts  visual-quality-measure_test.ts
apps/workbench/src/: app.tsx  artifact-draft-publisher.ts  artifact-draft-publisher_test.ts  artifact-editor-checkpoint.ts  artifact-editor-checkpoint_test.ts  artifact-history-client.ts  artifact-history-client_test.ts  block-store.ts  block-store_test.ts  capsule.css  debug-capsule-client.ts  (+18 more)
crates/hyper-term-core/: Cargo.toml
crates/hyper-term-core/src/: execution_context.rs  journal.rs  lib.rs  operation.rs  projector.rs  sandbox.rs  terminal.rs
crates/hyper-term-daemon/: Cargo.toml
crates/hyper-term-daemon/src/: acp_provider_home.rs  agent_capability.rs  agent_gateway.rs  agent_provider_probe.rs  agent_session_store.rs  approval_detail.rs  artifact_debug_capsule.rs  artifact_editor_store.rs  artifact_runtime_trace_store.rs  artifact_store.rs  artifact_visual_quality_store.rs  artifact_workbench_fixture.rs  brokered_mcp_operation.rs  claude_credentials.rs  client.rs  copilot_credentials.rs  daemon_isolated.rs  daemon_terminal.rs  daemon_validation.rs  desktop.rs  desktop_bundle.rs  desktop_crash.rs  editor_lsp.rs  isolated_result_store.rs  lib.rs  local_mcp_runtime.rs  main.rs  mcp.rs  mcp_gateway.rs  network_proxy.rs  operation_execution_context.rs  private_fs.rs  state_root_lock.rs  unix_server.rs  web_gateway.rs  workspace_apply.rs  workspace_diff.rs  workspace_snapshot.rs
crates/hyper-term-daemon/src/agent_gateway/: agent_turn.rs  artifact_quality.rs  http_handlers.rs  launch_provider.rs  mcp_launch.rs  permission.rs  runtime_artifact.rs  runtime_operations.rs  runtime_session.rs  startup.rs  test_support.rs  tests_core.rs  tests_effects.rs  tests_session.rs  view_model.rs
crates/hyper-term-daemon/src/workspace_apply/: tests.rs  workspace_io.rs
crates/hyper-term-daemon/testdata/: artifact_candidate_v1.json  bug_capsule_v1.json
crates/hyper-term-daemon/tests/: agent_gateway_mcp.rs  control_authority.rs  daemon_flow.rs  execution_context_flow.rs  mcp_flow.rs  state_root_lock.rs
crates/hyper-term-drivers/: Cargo.toml
crates/hyper-term-drivers/src/: acp.rs  acp_capabilities.rs  acp_session_update.rs  acp_tests.rs  agent.rs  codec.rs  codex.rs  codex_approval.rs  codex_containment.rs  deno_containment.rs  deno_genui.rs  deno_lsp.rs  execution_context.rs  lib.rs  mcp.rs  mcp_client.rs  process.rs  structured_agent.rs
crates/hyper-term-drivers/tests/: acp_agent.rs  codex_app_server.rs  deno_genui.rs  deno_lsp.rs
crates/hyper-term-protocol/: Cargo.toml
crates/hyper-term-protocol/src/: approval.rs  artifact.rs  block.rs  domain.rs  execution_context.rs  ids.rs  lib.rs  mcp.rs  sandbox.rs  terminal_web.rs  wire.rs
crates/hyper-term-sandbox/: Cargo.toml
crates/hyper-term-sandbox/src/: lib.rs  lima.rs  macos.rs  seatbelt_base_policy.sbpl  seatbelt_network_policy.sbpl  worktree.rs
docs/architecture/: 0001-hybrid-renderer-spike.md  0002-runtime-authority-boundaries.md  0003-brokered-deno-sidecar.md  0004-versioned-agentic-ui-artifacts.md  0005-incremental-react-compilation.md  0006-semantic-time-travel-debug.md  0007-react-workbench-and-editors.md  0008-license-scoped-warp-reuse.md  0009-rust-acp-mcp-adapters.md  0010-deno-first-static-workbench-build.md  0011-versioned-block-render-document.md  0012-native-sdk-renderer-spike.md  0013-native-sdk-default-product-shell.md  0014-rust-owned-coding-agent-sandbox.md  0015-native-scene-snapshots.md  0016-operation-scoped-execution-contexts.md  0017-capability-scoped-daemon-control-planes.md
docs/benchmarks/: terminal-browser-baseline-2026-07-21.md  terminal-core-baseline-2026-07-18.md  workbench-browser-baseline-2026-07-21.md
docs/release/: macos-app.md
docs/research/: ai-cli-computer-use-probe-2026-07.md  ai-terminal-user-needs-2026-07.md  idea-new-terminal-audit-2026-07.md  terminal-landscape-2026-07.md
runtime/: deno-manifest.json  genui-compiler.ts
runtime/acp/: deno.json  package.json
scripts/: assemble_macos_app.sh  benchmark_genui_preview_slice.ts  build_acp_runtime.ts  check_design_adapters.ts  check_design_adapters_spec.ts  check_release_cadence.ts  check_release_cadence_test.ts  check_source_size.ts  check_source_size_test.ts  clean_runtime.ts  clean_terminal.ts  clean_workbench.ts  copy_esbuild_wasm.ts  inline_preview_shell.ts  package_macos_app.sh  package_web_renderers.ts  package_web_renderers_test.ts  serve_verification_assets.ts  smoke_macos_capsule.sh  smoke_macos_desktop.sh  smoke_macos_real_codex.sh  smoke_macos_real_codex_acp.sh  verify_acp_runtime.ts  verify_artifact_workbench_browser.sh  verify_deno_lsp.sh  verify_deno_runtime.ts  verify_runtime_build.ts  verify_terminal_browser.sh  verify_terminal_build.ts  verify_web_renderer_kit_browser.sh  verify_web_renderer_package.ts  verify_workbench_browser.sh  verify_workbench_build.ts
scripts/fixtures/: acp_diff_agent.sh  acp_terminal_agent.sh  codex_goal_agent.sh  fake_limactl.sh
(+31 files in other folders)
