[workspace]
members = [
  "crates/hyper-term-protocol",
  "crates/hyper-term-core",
  "crates/hyper-term-daemon",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.95"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5.15"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
uuid = { version = "1.24.0", features = ["serde", "v4", "v5"] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
