[package]
name = "hyper-term-core"
description = "Renderer-independent control kernel for Hyper Term"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
hyper-term-protocol = { path = "../hyper-term-protocol" }
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
