[package]
name = "hyper-term-daemon"
description = "Out-of-process Hyper Term control kernel host"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "hyper_term_daemon"
path = "src/lib.rs"

[[bin]]
name = "hyperd"
path = "src/main.rs"

[[bin]]
name = "hyper-term-desktop"
path = "src/desktop.rs"

[[bin]]
name = "hyper-term-mcp"
path = "src/mcp.rs"

[dependencies]
axum.workspace = true
crossbeam-channel.workspace = true
futures-util.workspace = true
hyper-term-core = { path = "../hyper-term-core" }
hyper-term-drivers = { path = "../hyper-term-drivers" }
hyper-term-protocol = { path = "../hyper-term-protocol" }
hyper-term-sandbox = { path = "../hyper-term-sandbox" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-tungstenite = "0.29.0"
