[package]
name = "hyper-term-drivers"
description = "Supervised external tool and structured-agent driver transports for Hyper Term"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
hyper-term-protocol = { path = "../hyper-term-protocol" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
