[package]
name = "hyper-term-drivers"
description = "Supervised external tool and structured-agent driver transports for Hyper Term"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agent-client-protocol.workspace = true
crossbeam-channel.workspace = true
hyper-term-core = { path = "../hyper-term-core" }
hyper-term-protocol = { path = "../hyper-term-protocol" }
hyper-term-sandbox = { path = "../hyper-term-sandbox" }
libc.workspace = true
process-wrap.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
