[package]
name = "hyper-term-protocol"
description = "Versioned domain, Block Render, and local wire contracts for Hyper Term"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
